--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist && echo https://newmediapilot.github.io/gsap-examples/",
+    "gf": "bash scripts/git-flatten-branch.sh"
   },
   "devDependencies": {
     "typescript": "~5.9.3",
